Illegal reflective access by com.sun.mail.util.SocketFetcher #124 Co-authored-by: jmehrens <jason_mehrens@hotmail.com> Co-authored-by: icu5545 <icu5545@github.com> Signed-off-by: jmehrens <jason_mehrens@hotmail.com>